<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_daily_activity"
            android:icon="@drawable/daily_activity"
            android:title="@string/menu_daily_route_plan" />
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/download"
            android:title="@string/menu_daily_download" />

        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/upload"
            android:title="@string/menu_upload_data" />

        <item
            android:id="@+id/nav_geotag"
            android:icon="@mipmap/geotag_grey"
            android:title="@string/menu_geotag" />

<!--        <item
            android:id="@+id/nav_visitor_login"
            android:icon="@drawable/visitor_login"
            android:title="@string/visitor_login" />

         <item
             android:id="@+id/nav_mer_tool_kit"
             android:icon="@drawable/mer_tool_kit"
             android:title="@string/mer_tool_kit" />-->

<!--
        <item
            android:id="@+id/nav_clear"
            android:icon="@mipmap/services_grey"
            android:title="@string/clear_data"
            android:visible="false"/>-->

    </group>

   <!-- <item android:title="Attendance">
        <menu>
            <item
                android:id="@+id/nav_my_attendance"
                android:icon="@drawable/attendance"
                android:title="@string/my_attendance" />
            <item
                android:id="@+id/nav_team_attendance"
                android:icon="@drawable/teamattendance"
                android:title="@string/team_attendance" />
        </menu>
    </item>-->


 <!--   <item android:title="Distributor Option">
        <menu>
            <item
                android:id="@+id/nav_db_posm"
                android:icon="@drawable/db_posm"
                android:title="@string/bd_posm" />
            <item
                android:id="@+id/nav_db_window_kit"
                android:icon="@drawable/tools_kit"
                android:title="@string/db_window_kit" />
        </menu>
    </item>-->

 <!--   <item android:title="Performance">
        <menu>

            <item
                android:id="@+id/my_performance"
                android:icon="@drawable/performance"
                android:title="@string/myperformance"
                android:visible="true"/>

            <item
                android:id="@+id/team_performance"
                android:icon="@drawable/team_performance"
                android:title="@string/teamperformance"
                android:visible="true"/>

            <item
                android:id="@+id/outlet_performance"
                android:icon="@drawable/outlet_performance"
                android:title="@string/outletperformance"
                android:visible="false"/>
        </menu>

    </item>
-->

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_backup"
                android:icon="@drawable/db_backup"
                android:title="@string/backup" />

            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/exit"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>
